--- a/themes/paper/layouts/partials/footer.html
+++ b/themes/paper/layouts/partials/footer.html
@@ -9,7 +9,7 @@
     <a class="link" href="{{ `` | absURL }}">{{ site.Title }}</a>
   {{end}}
   </div>
-  <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
+  <!-- <a class="link mx-6" href="https://gohugo.io/" rel="noopener" target="_blank"
     >powered by hugo️️</a
   >️
   <a
@@ -18,5 +18,5 @@
     rel="noopener"
     target="_blank"
     >hugo-paper</a
-  >
+  > -->
 </footer>
